--- a/ErpReport/ErpReport/TCL_ProjectStockInfoList.rdl
+++ b/ErpReport/ErpReport/TCL_ProjectStockInfoList.rdl
@@ -9,7 +9,7 @@
       <am:Name>SSDTRS</am:Name>
       <am:Version>17.9.34622.214</am:Version>
     </am:UpdatedBy>
-    <am:LastModifiedTimestamp>2024-03-28T09:32:37.0402430Z</am:LastModifiedTimestamp>
+    <am:LastModifiedTimestamp>2024-04-01T04:17:32.6146584Z</am:LastModifiedTimestamp>
   </am:AuthoringMetadata>
   <df:DefaultFontFamily>Segoe UI</df:DefaultFontFamily>
   <AutoRefresh>0</AutoRefresh>
@@ -62,7 +62,7 @@ from Company Where CompanyId=@CompanyId</CommandText>
         </Field>
       </Fields>
     </DataSet>
-    <DataSet Name="ProjectInfoDset">
+    <DataSet Name="ProjectStockInfoDset">
       <Query>
         <DataSourceName>ChequeRegisterDS</DataSourceName>
         <QueryParameters>
@@ -665,11 +665,11 @@ from Company Where CompanyId=@CompanyId</CommandText>
                 </TablixMember>
               </TablixMembers>
             </TablixRowHierarchy>
-            <DataSetName>ProjectInfoDset</DataSetName>
+            <DataSetName>ProjectStockInfoDset</DataSetName>
             <Top>1.37375in</Top>
             <Left>0.67118in</Left>
             <Height>0.47222in</Height>
-            <Width>6.69548in</Width>
+            <Width>6.69549in</Width>
             <ZIndex>2</ZIndex>
             <Style>
               <Border>
