--- a/KGERP/Views/Report/ProjectInfoReport.cshtml
+++ b/KGERP/Views/Report/ProjectInfoReport.cshtml
@@ -9,11 +9,11 @@
 </style>
 <section class="content-header">
     <h1>
-        Project Information Report <span style="color:indianred"> @Model.CompanyName</span>
+        Project Management Report <span style="color:indianred"> @Model.CompanyName</span>
     </h1>
     <ol class="breadcrumb">
         <li><a href="~/Home/Index"><i class="fa fa-dashboard"></i>Dashboard</a></li>
-        <li class="active">Project Information Report</li>
+        <li class="active">Project Management Report</li>
     </ol>
 </section>
 <section class="content">
