Quotation Submit done

--- a/KGERP/Views/Quotation/QuotationSubmit.cshtml
+++ b/KGERP/Views/Quotation/QuotationSubmit.cshtml
@@ -142,7 +142,7 @@
                                                 </tfoot>
                                             </table>
                                         </div>
-                                        if (true)
+                                        if (Model.QuotationSubmitMaster.QuotationSubmitStatusId == (int)EnumQuotationSubmitStatus.Pending)
                                         {
                                             <div class="box-footer">
                                                 <div class="row">
